--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "babel-preset-stage-0": "^6.24.1"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.11.0",
+    "graphql": "^15.4.0",
+    "nanoid": "^3.1.16",
     "nodemon": "^2.0.6"
   }
 }
